# gorilla

./: CMakeLists.txt
cmake/: gorillaConfig.cmake.in
include/: gorilla.h
src/: gorilla.c
tests/: CMakeLists.txt  test_bitstream.c  test_edge_cases.c  test_streaming.c  test_timestamps.c  test_values.c
